# smart-traffic-env

./: .gitignore  BLOG.md  Dockerfile  README.md  __init__.py  docker-compose.yml  inference.py  run_gui.py  train.py  train_llm.py
smart_traffic/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
smart_traffic/core/: __init__.py  grid.py  intersection.py  pathfinder.py  vehicle.py
smart_traffic/rewards/: __init__.py  components.py  engine.py  rubrics.py  shaping.py
smart_traffic/scenarios/: __init__.py  adaptive_demand.py  base.py  cascading_failure.py  directional_imbalance.py  emergency.py  event_spike.py  manager.py  multi_incident.py  network_partition.py  pedestrian_surge.py  recovery_challenge.py  road_block.py  rush_hour.py  sensor_noise.py  vehicle_mix.py  weather.py
smart_traffic/server/: Dockerfile  __init__.py  app.py  requirements.txt  smart_traffic_environment.py
smart_traffic/training/: __init__.py  curriculum.py  gym_adapter.py  mappo.py  metrics.py
smart_traffic/visualization/: __init__.py  grid_renderer.py  plotter.py
weights/: mappo_checkpoint.pt
