# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-smart-traffic"
version = "0.1.0"
description = "9×9 MARL traffic signal control — 81 agents, 14 scenarios"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "numpy>=1.21.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "tensorboard>=2.14.0",
]
visualization = [
    "pygame>=2.5.0",
    "matplotlib>=3.7.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "openenv-smart-traffic[training,visualization,dev]",
]

[project.scripts]
server = "smart_traffic.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "smart_traffic",
    "smart_traffic.server",
    "smart_traffic.core",
    "smart_traffic.rewards",
    "smart_traffic.scenarios",
    "smart_traffic.training",
    "smart_traffic.visualization",
]
package-dir = {
    "smart_traffic" = ".",
    "smart_traffic.server" = "server",
    "smart_traffic.core" = "core",
    "smart_traffic.rewards" = "rewards",
    "smart_traffic.scenarios" = "scenarios",
    "smart_traffic.training" = "training",
    "smart_traffic.visualization" = "visualization",
}